--- a/utkface-multitask/configs/multitask.yaml
+++ b/utkface-multitask/configs/multitask.yaml
@@ -5,17 +5,19 @@ hydra:
 data:
   root_dir: /home/umutdundar/Desktop/repositories/utkface-multitask/utkface-multitask/dataset/processed_split
   img_size: 224
-  multitask: True
+  
 
 training:
-  batch_size: 64
+  multitask: True
+  batch_size: 128
   num_epochs: 10
+  # checkpoint: utkface-multitask/src/models/contrastive_temp007_5class.ckpt
+  checkpoint: null
   lr: 1e-3
-  temperature: 0.02
 logging:
   wandb:
     project: utkface-multitask
-    name: contrastive_experiment_temp002
+    name: imagenetpretrained_multitask_all1e-3lr
     offline: False
     log_model: all
     save_dir: /home/umutdundar/Desktop/repositories/utkface-multitask/logs
